# talia-cli

./: .coverage  LICENSE  README.md  pyproject.toml
talia/: __init__.py  cli.py  logger.py  models.py  repo.py  storage.py
tests/: conftest.py  test_cli.py  test_repo.py  test_storage.py
